# super_agent

./: .env.dev  .env.prod  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/plans/: 2026-06-16-knowledge-base.md  2026-06-23-excel-loader.md  2026-06-23-paddleocr-scanned-pdf.md  2026-06-24-ppt-loader-and-topic-tags.md  2026-07-01-rag-enterprise-enhancement-plan.md  2026-07-16-collection-isolation-plan.md  2026-07-20-rag-phase1-review.md  2026-07-23-phase2-partA-agent-core-design.md  2026-07-23-phase2-partB-enterprise-governance-design.md  2026-07-23-phase2-partC-memory-observability-design.md  collection-based-department-isolation.md  multi-tenant-isolation-comparison.md  quiet-shimmying-nygaard.md  rag-md-pure-lantern.md  rag-phase1-gap-analysis.md
data/index_state/: index_state.json  index_state_103.json
data/raw_docs/: tags.yaml  用户组&计费策略.xlsx
data/raw_docs/devloment/: AI学习笔记.docx  sample.md  使用 Java 集成 OpenStack 创建虚拟机.markdown  算力调度管理平台研发规划-加NV支持页.pptx  设计过程.txt  路线.docx
deploy/docker/mysql/: init.sql
docs/superpowers/specs/: 2026-06-16-super-agent-design.md  2026-06-16-super-agent-requirements.md  2026-06-23-excel-loader-design.md  2026-06-23-paddleocr-scanned-pdf-design.md  2026-06-24-ppt-loader-design.md  2026-07-01-agent-permission-architecture-design.md  langchain_full_stack.md  sso.md  企业级 RAG 知识库缺失能力.md
services/elasticsearch/: Dockerfile  README.md  docker-compose.yml
services/flagembedding/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
services/qdrant/: README.md  docker-compose.yml
src/super_agent/: config.py  main.py
src/super_agent/api/: sso.py
src/super_agent/knowledge/: audit.py  bm25.py  es_client.py  fanout_retriever.py  generator.py  indexer.py  llm_client.py  metadata.py  models.py  query_processor.py  remote_reranker.py  reranker.py  retriever.py  tags.py
src/super_agent/knowledge/chunkers/: __init__.py  base.py  llm_assisted.py  semantic.py
src/super_agent/knowledge/embedders/: __init__.py  api.py  base.py
src/super_agent/knowledge/loaders/: __init__.py  base.py  excel.py  html.py  markdown.py  pdf.py  ppt.py  structured.py  text.py  word.py
src/super_agent/knowledge/prompts/: rag_system_prompt.txt
src/super_agent/knowledge/stores/: __init__.py  base.py  chroma_store.py  milvus_store.py  qdrant_store.py
src/super_agent/prompts/: __init__.py
src/super_agent/prompts/templates/: boundary_split.jinja2  qa_system.jinja2  query_expansion.jinja2  query_rewrite.jinja2  topic_tagging.jinja2
src/super_agent/static/: index.html
src/super_agent/tracing/: __init__.py  metrics.py  setup.py
tests/e2e/: test_e2e_rag.py
tests/integration/: test_rag_delete.py  test_rag_query.py
tests/unit/: test_bm25.py  test_chunkers.py  test_config.py  test_embedders.py  test_excel_loader.py  test_indexer.py  test_loaders.py  test_metadata.py  test_missing_coverage.py  test_models.py  test_reranker.py  test_retriever.py  test_stores.py  test_tags.py
