[project]
name = "super-agent"
version = "0.1.0"
description = "Enterprise AI Application Development Platform"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langsmith>=0.1",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "chardet>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
super-agent = "super_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/super_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
