[project]
name = "super-agent"
version = "0.1.0"
description = "Enterprise AI Application Development Platform"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langserve[server]>=0.3",
    "langsmith>=0.1",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",
    "langchain-chroma>=0.2",
    "langchain-milvus>=0.1",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncmy>=0.2",
    "docker>=7.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "rank-bm25>=0.2.2",
    "chardet>=5.0",
    "qdrant-client>=1.9",
    "jieba>=0.42",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "python-pptx>=0.6.21",
]

[project.optional-dependencies]
ml = [
    "unstructured[all-docs]>=0.15",
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
]
gpu = [
    "paddlepaddle-gpu>=2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
super-agent = "super_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/super_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "xlwt>=1.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
